@@ -156,6 +156,15 @@
     (test (:ascii :newline :cr :replacement #\?) '(#\5 #\? #\Linefeed #\Linefeed #\7))
     (test (:ascii :newline :crlf) '(#\5 #\Linefeed #\7))
     (test (:ascii :newline :crlf :replacement #\?) '(#\5 #\? #\Linefeed #\7)))
+  (with-input-bytes ((:input :multiple-invalid :crlf) (list #x35 #xff #x0d #x0a #xff #xff #x37))
+    (test :ascii '(#\5 #\Return #\Linefeed #\7))
+    (test (:ascii :replacement #\?) '(#\5 #\? #\Return #\Linefeed #\? #\? #\7))
+    (test (:ascii :newline :lf) '(#\5 #\Return #\Linefeed #\7))
+    (test (:ascii :newline :lf :replacement #\?) '(#\5 #\? #\Return #\Linefeed #\? #\? #\7))
+    (test (:ascii :newline :cr) '(#\5 #\Linefeed #\Linefeed #\7))
+    (test (:ascii :newline :cr :replacement #\?) '(#\5 #\? #\Linefeed #\Linefeed #\? #\? #\7))
+    (test (:ascii :newline :crlf) '(#\5 #\Linefeed #\7))
+    (test (:ascii :newline :crlf :replacement #\?) '(#\5 #\? #\Linefeed #\? #\? #\7)))
   (with-output-characters ((:output :invalid :lf) (list #\5 (code-char 255) #\Linefeed #\7))
     (test :ascii '(#x35 #x0a #x37))
     (test (:ascii :replacement #\?) '(#x35 #x3f #x0a #x37))
