@@ -152,6 +152,15 @@
     (test (:ascii :newline :cr :replacement #\?) '(#\5 #\? #\Linefeed #\Linefeed #\7))
     (test (:ascii :newline :crlf) '(#\5 #\Linefeed #\7))
     (test (:ascii :newline :crlf :replacement #\?) '(#\5 #\? #\Linefeed #\7)))
+  (with-input-bytes ((:input :multiple-invalid :crlf) (list #x35 #xa5 #x0d #x0a #xa5 #xa5 #x37))
+    (test :ascii '(#\5 #\Return #\Linefeed #\7))
+    (test (:ascii :replacement #\?) '(#\5 #\? #\Return #\Linefeed #\? #\? #\7))
+    (test (:ascii :newline :lf) '(#\5 #\Return #\Linefeed #\7))
+    (test (:ascii :newline :lf :replacement #\?) '(#\5 #\? #\Return #\Linefeed #\? #\? #\7))
+    (test (:ascii :newline :cr) '(#\5 #\Linefeed #\Linefeed #\7))
+    (test (:ascii :newline :cr :replacement #\?) '(#\5 #\? #\Linefeed #\Linefeed #\? #\? #\7))
+    (test (:ascii :newline :crlf) '(#\5 #\Linefeed #\7))
+    (test (:ascii :newline :crlf :replacement #\?) '(#\5 #\? #\Linefeed #\? #\? #\7)))
   (with-output-characters ((:output :invalid :lf) (list #\BREVE (code-char 512) #\Linefeed #\7))
     (test :iso-8859-3 '(#xa2 #x0a #x37))
     (test (:iso-8859-3 :replacement #\?) '(#xa2 #x3f #x0a #x37))
